# ai-ml-fastapi-template

./: .env  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup_and_run.bat  setup_and_run.sh
app/: main.py
app/api/: __init__.py
app/utils/: app_logs.py  http_status.py
template/: config.py  main.py
template/api/: __init__.py  ping.py
